--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ android {
 
 dependencies {
 
-
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.10.1'
